# proxygen-cli

./: .gitignore  Makefile  README.md  client.py  install.sh  instance.json  main.py  oauth.py  paas-entry.py  paas.py  pyproject.toml  requirements.txt  state.py  tox.ini  uninstall.sh  vscode-settings.json
.github/workflows/: cd.yml  ci-checks.yml  ci-requirements.txt  lint-requirements.txt  lint.yml  pr.yml  run-python.yml  sbom.yml
.hooks/: pre-commit
proxygen_cli/: __init__.py  auth.py  cli_main.py  cli_options.py  cli_output.py  config.py  constants.py  credentials.py  dot_proxygen.py  proxygen_api.py
proxygen_cli/cli/: cli_credentials.py  cli_main.py  command_credentials.py  command_docker.py  command_instance.py  command_main.py  command_pytest_nhsd_apim_token.py  command_secret.py  command_settings.py  command_spec.py
proxygen_cli/lib/: auth.py  constants.py  credentials.py  dot_proxygen.py  output.py  proxygen_api.py  settings.py  spec.py  spec_server.py  version.py
proxygen_cli/test/: command_credentials_test.py  command_instance_test.py  command_main_test.py  command_pytest_nhsd_apim_token_test.py  command_secret_test.py  command_settings_test.py  command_spec_test.py  command_version_test.py  conftest.py  mock_private_key.py  validate_cli_version_test.py
proxygen_cli/test/fixtures/: client.key  client.pem  secret.txt
scripts/: compare_version.py  get_token.py  manual_endpoint.py
