[tool.poetry]
name = "proxygen-cli"
version = "2.1.5"
description = "CLI for interacting with NHSD APIM's proxygen service"
authors = ["Ben Strutt <ben.strutt1@nhs.net>"]
readme = "README.md"
packages = [{include = "proxygen_cli"}]
repository = "https://github.com/NHSDigital/proxygen-cli"

[tool.poetry.scripts]
proxygen = 'proxygen_cli.cli.command_main:main'

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.1"
click = "^8.1.3"
pyjwt = "^2.3.0"
requests = "^2.27.1"
lxml = "^4.7.1"
cryptography = "^36.0.1"
pyyaml = "^6.0"
yaspin = "^2.2.0"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-icdiff = "^0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
