[tool.poetry]
name = "proxygen-cli"
version = "3.0.3"
description = "CLI for interacting with NHSD APIM's proxygen service"
authors = ["Ben Strutt <ben.strutt1@nhs.net>"]
readme = "README.md"
packages = [{include = "proxygen_cli"}]
repository = "https://github.com/NHSDigital/proxygen-cli"

[tool.poetry.scripts]
proxygen = 'proxygen_cli.cli.command_main:main'

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^1.9.1"
click="^8.1.2"
pyjwt = "^2.9.0"
requests = "^2.32.3"
lxml = "^6.0.1"
cryptography = ">= 44.0.1, < 47.0.0" # Not directly imported, but needed by pyjwt for the RS512 algorithm
pyyaml = "^6.0.3"
yaspin = "^3.2.0"
tabulate = ">=0.9,<0.11"
packaging = "^24.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^4.0.0"
pytest-icdiff = ">=0.6,<0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"